20240929 add info, except PV-BEV survey.

--- a/20240929/20240929.md
+++ b/20240929/20240929.md
@@ -1,26 +1,84 @@
 # Summary 20240929
 
-## 01 R-CNN系列
+[toc]
 
-对于图像检测，之前还是只会一个训练+应用，具体细节不甚了解，目前先了解了一下RCNN系列的基本思想(区域提取-特征提取-分类/回归)和构架，并整理如下：
+## 00 前言
+
+额，我觉得按照我的习惯和目前的基础来看，还是静下心来先逐个地学习经典的算法和结构，打好基础，让知识逐层的向外“长”，这样会比较有益。就像下面的这个加了残差后的嵌套网络逼近真值$f'$一样 :satisfied:(BEV看的有点少，拿其他的来凑啦)：
+
+<img src="./assets/res.png" alt="res" style="zoom:50%;" align='left'/>
+
+
+
+## 01 学习：R-CNN系列
+
+对于图像检测，之前还是只会一个训练+应用，具体细节不甚了解，目前先了解了一下RCNN系列的基本思想(区域提取-特征提取-分类/回归)和构架，阅读了相关的论文和博客，并整理如下：
 
 ![Faster R-CNN](./assets/Faster R-CNN.png)
 
-## 02 T-Rex Label 图像标注软件
+后续计划基于RCNN系列，继续学习SSD，CenterNet，Yolo等算法的原理，加深对IMAGE DET技术的理解。
+
+
+
+## 02 学习：Transformer
+
+为了深度地理解Transformer，这周按照以下脉络进行了学习：
+
+① 学习注意力机制基本概念: query, key, value
+
+②基于Nadaraya-Watson核回归，学习注意力汇聚机制 ：基于query-key的attention-weight matrix调整value
+
+③学习构造attention-weight的评分函数：加性注意力和缩放点击注意力
+
+④基于以上所学，结合编码器-解码器的GRU网络，编程完成了一个机器翻译（以这个入门Transformer好像比以图像入门简单些）的练习，进一步理解了注意力机制在编码器-解码器结构中的使用方式：
+
+| <img src="./assets/image-20240928165000742.png" alt="image-20240928165000742" style="zoom:50%;" align='left'/> | <img src="./assets/image-20240928165303429.png" alt="image-20240928165303429" style="zoom:67%;" /> |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| <img src="./assets/image-20240928164117927.png" alt="image-20240928164117927" style="zoom:67%;" align='left'/> | <img src="./assets/image-20240928165351071.png" alt="image-20240928165351071" style="zoom:50%;" align='center'/> |
+
+![image-20240928165837448](./assets/image-20240928165837448.png)
+
+下一周，打算按照 **多头注意力机制-自注意力和位置编码-经典Transformer** 的计划开展Transformer学习.
+
+
+
+## 03 阅读：Vision-Centric BEV Perception: A Survey
+
+
+
+
+
+## 04 发现：T-Rex Label 图像标注软件
 
 标注效果如下，相比于传统的图像标注方式，极大地提高了效率。
 
-<img src="./assets/9月24日.gif" alt="9月24日" align='left'/>![m1](./assets/m1.gif)
+| <img src="./assets/9月24日.gif" alt="9月24日" align='left'/> | ![m1](./assets/m1.gif) |
+| ------------------------------------------------------------ | ---------------------- |
 
-起源是带我写论文的一个老师给同一个小组的同学布置了份标注的任务，而一张图有太多目标，传统的标注方式太慢了，因而想起了T-Rex Label标注。可惜，官方给的在线标注只能够导出YOLO和COCO的标注格式，因此自己写了个YOLO2VOC的小接口，并撰写了下述CSDN博客给小组成员作参考：
+
+起源是带我写论文的本科老师给同一个小组的同学布置了份标注的任务，而一张图有太多目标，传统的标注方式太慢了，因而想起了T-Rex Label标注。可惜，官方给的在线标注只能够导出YOLO和COCO的标注格式，因此自己写了个YOLO2VOC的小接口，并撰写了下述CSDN博客给小组成员作参考：
 
 ![image-20240927191451961](./assets/image-20240927191451961.png)
 
-## 2024第二届国防科技高地论坛
 
-<img src="./assets/微信图片_20240927181207.jpg" alt="微信图片_20240927181207" style="zoom:15%; align='left'" /><img src="./assets/微信图片_20240927180607.jpg" alt="微信图片_20240927180607" style="zoom:15%;" /><img src="./assets/微信图片_20240927180543.jpg" alt="微信图片_20240927180543" style="zoom:15%;"  /><img src="./assets/微信图片_20240927180611.jpg" alt="微信图片_20240927180611" style="zoom:15%;" />
 
-9月27日下午我参加了第二届国防科技高地论坛，在会上，来自国地共建人形机器人创新研究中心的江磊、来自上海交通大学的闫维新、来自清华大学的孙富春作了关于人形机器人/三位一体作战模式/具身智能的报告。有些许感触记录如下：
+## 05 发现： GitKraken 一款可视化的Git GUI
+
+可以用图像化界面完成Git操作，管理和同步项目。
+
+优点：界面颜值高（颜控:neutral_face:）,版本历史显示清晰明了，Pull/Push/Merge等操作可视化显示...
+
+![image-20240928160102229](./assets/image-20240928160102229.png) 
+
+
+
+## 06 感悟：2024第二届国防科技高地论坛
+
+|<img src="./assets/微信图片_20240927181207.jpg" alt="微信图片_20240927181207" style="zoom:15%; align='left'" />    |<img src="./assets/微信图片_20240927180607.jpg" alt="微信图片_20240927180607" style="zoom:15%;" />     |
+| ---- | ---- |
+|<img src="./assets/微信图片_20240927180543.jpg" alt="微信图片_20240927180543" style="zoom:15%;"  />   |<img src="./assets/微信图片_20240927180611.jpg" alt="微信图片_20240927180611" style="zoom:15%;" />    |
+
+9月27日下午我参加了第二届国防科技高地论坛(分论坛，主论坛都是院士大佬，没嘚去)，在会上，来自国地共建人形机器人创新研究中心的江磊、来自上海交通大学的闫维新、来自清华大学的孙富春作了关于人形机器人/三位一体作战模式/具身智能的报告。有些许感触记录如下：
 
 | 序号                    | 内容                                                         | 备注                                                         |
 | ----------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -43,3 +101,6 @@
 | ${\color{#7A2E5B}{17}}$ | 论文：Deep Multimodal Fusion by Chaanel Exchanging (孙富春)  | 介绍了一种通过交换通道实现多传感器融合时自适应调整各个传感器数据有效性倾向的方案：CEN多模态融合框架 |
 | ${\color{#7A2E5B}{18}}$ | 3D感知在人形机器人尤其是具身智能中显示出越来越重要的作用     | 3D融合感知在许多方向都显示出其重要性，感知该往这个方向发展   |
 
+
+
+## 07 上岸：预录取通知
