Add PV2BEV survey in 20240929

--- a/20240929/20240929.md
+++ b/20240929/20240929.md
@@ -44,7 +44,13 @@
 
 ## 03 阅读：Vision-Centric BEV Perception: A Survey
 
+这篇综述的前半部分主要从基于geometry、基于depth、基于MLP和基于transformer的四个分支讲述如何将多相机的PV数据转换为鸟瞰图的BEV数据。通过阅读前半部分，了解了各个分支的典型算法和各方向的优缺点，现将PV2BEV的综述总结如下：
 
+![BEV Survey](./assets/BEV Survey.png)
+
+后半部分讲解的主要是PV2BEV的拓展应用，包括Multi-task learning/Fusion under BEV/Semantic occupancy prediction等。
+
+这周没花时间看BEVFusion中类似LSS的代码，下周研究下，这部分感觉挺重要的。
 
 
 
@@ -104,3 +110,7 @@
 
 
 ## 07 上岸：预录取通知
+
+终于结束了:smile:
+
+![image-20240929102748052](./assets/image-20240929102748052.png)
