--- a/20241014/Summary 20241014.md
+++ b/20241014/Summary 20241014.md
@@ -14,7 +14,23 @@
 
 [【上采样】关于最近邻插值/双线性插值/反卷积这一篇就够了-CSDN博客](https://blog.csdn.net/luokang21/article/details/142756875)
 
+## 03 学习：Notion
 
+学习了Notion笔记
+
+## 04 毕设：多模态融合感知
+
+确定了毕设题目、主要任务、目的和工作内容
+
+①
+**名称：**基于多模态融合的智能警用巡检机器人感知算法研究
+
+②
+**主要任务：**本课题以基于民用产品升级的智能警用巡检机器人系统为依托，深入研究RGB-D数据与LiDAR数据结合的3D行人目标检测技术。主要任务包括：(1)分析各传感器分支下的先进检测技术和常见的3D行人模型(如SMPL)；(2)构建并实现多模态融合的网络模型；(3)将算法应用到仿真环境或实验设备中，验证所提方法的可行性和性能指标。
+
+**目的：**通过完成本课题研究，了解多传感器融合的3D目标检测前沿技术发展，加深对相关3D目标检测方法的理解，从而使得专业基础知识和科研实践能力得到综合性的训练。同时在研究实践与论文写作的过程中，逐步培养严谨的科学态度，并提高技术调研、编程实践和科研创新等方面的能力。
+
+**工作内容：**(1)完成相关文献的调研，其中英文文献≥20篇，并完成相关的文献综述；(2)完成传感器的标定和数据标注；(3)完成多传感器融合网络模型的搭建；(4)在有条件的情况下，完成虚拟仿真和实物实验；(5)完成本科毕业论文撰写和答辩。
 
 # Appendix
 
@@ -36,6 +52,8 @@
 
 > 正念是对**当下**的**实相**(身体、内心)保有**觉知**(主动、不加批判)。
 
-④呼吸
+④呼吸 纯粹的专注 呼吸与情绪
 
-呼吸有三个部位(鼻(key)、胸、腹)
+呼吸有三个部位(鼻(key)、胸、腹(缓解紧张))
+
+⑤睡眠、运动、冥想可以清除注意力残留内存
